feat: 모든 차가 경주하는 기능 구현